--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,viewport-fit=cover" />
-        <title>VK Radio</title>
+        <title>Zulianisima FM</title>
         <link rel="preconnect" href="https://fonts.googleapis.com/" />
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
         <meta name="theme-color" content="dark light" />
@@ -11,8 +11,8 @@
         <meta property="og:image:type" content="assets/default_logo.png" />
         <meta property="og:image:width" content="600" />
         <meta property="og:image:height" content="360" />
-        <meta property="og:title" content="RadioPlayer" />
-        <meta property="og:description" content="VK Radio" />
+        <meta property="og:title" content="Player" />
+        <meta property="og:description" content="Zuliansimafm" />
         <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
         <link rel="stylesheet" href="css/main.min.css" />
         <link rel="stylesheet" href="custom.css" />
@@ -24,32 +24,32 @@
                 timeRefresh: 10000,
                 stations: [
                     {
-                        name: "VK Radio",
-                        hash: "Salsa y Verbena",
-                        description: "Música sim parar",
-                        logo: "https://i.postimg.cc/9MJvrqRH/1-VK-STereo-Oficial-2026.png",
+                        name: "Zulianisima FM",
+                        hash: "Tan Zuliana Como Vos",
+                        description: "100.3fm",
+                        logo: "https://i.postimg.cc/tJpnZpGN/ss.png",
                         album:
-                            "https://i.postimg.cc/FKx6BJxF/1-VK-STereo.png",
+                            "https://i.postimg.cc/DwXfTHtW/logo-cover.png",
                         cover:
-                            "https://i.postimg.cc/FKx6BJxF/1-VK-STereo.png",
+                            "https://i.postimg.cc/DwXfTHtW/logo-cover.png",
                         api: "",
-                        stream_url: "https://stream.zeno.fm/kk3x5cventzuv",
+                        stream_url: "https://stream-177.zeno.fm/m7z6zdlqlrkuv",
                         tv_url: "",
                         server: "",
                         program: {
                             time: "24/7",
-                            name: "VK Radio fm ",
+                            name: " ",
                             description: "EN VIVO // ON AIR",
                         },
                         social: {
-                            whatsapp: "https://api.whatsapp.com/send/?phone=%2B573043773535&text&type=phone_number&app_absent=0",
+                            whatsapp: "https://api.whatsapp.com",
                             twitter: "",
-                           facebook: "https://www.facebook.com/profile.php?id=100050949647084",
+                           facebook: "https://www.facebook.com",
                             youtube: "",
-                            instagram: "https://www.instagram.com/reel/C4ntNLFOiMS/",
+                            instagram: "https://www.instagram.com/zulianisma100.3/",
                         },
                         apps: {
-                            android: "https://play.google.com/store/apps/details?id=com.radiosweb.app&hl=pt_BR",
+                            android: "https://drive.usercontent.google.com/download?id=1oAos8n3addzAYjlPLp0_k3pqAcV_jsB5&export=download&authuser=0",
                             ios: "",
                         },
                     },    
@@ -205,7 +205,7 @@
                         <div class="footer-tv"></div>
                         <div class="footer-app flex wrap g-0.75"></div>
                         <div class="footer-copyright">
-                            <small><strong>© VK Radio</strong> — +57 3043773535</small>
+                            <small><strong>© ACMEDIA</strong> — +58 4160678442</small>
                         </div>
                     </div>
                 </footer>
