--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             description: "EN VIVO // ON AIR",
                         },
                         social: {
-                            whatsapp: "https://api.whatsapp.com",
+                            whatsapp: "https://api.whatsapp.com/send/?phone=584160678442&text&type=phone_number&app_absent=0",
                             twitter: "",
                            facebook: "https://www.facebook.com",
                             youtube: "",
